# crawl4ai-cloud-sdk

./: .gitignore  LICENSE  PLAN.md  README.md  SDK.md
.claude-plugin/: marketplace.json
.claude/commands/: dev-plugin.md
go/: README.md  go.mod
go/examples/advanced/: 01_screenshots_http.go  01_screenshots_sdk.go  02_custom_browser_config.go  03_error_handling.go  04_storage_usage.go  README.md
go/examples/crawl/: 01_basic_crawl_http.go  01_basic_crawl_sdk.go  02_batch_crawl_http.go  02_batch_crawl_sdk.go  03_async_crawl_http.go  03_async_crawl_sdk.go  04_async_webhook_http.go  README.md
go/examples/deep_crawl/: 01_map_strategy.go  02_tree_strategies.go  03_best_first_scoring.go  04_scan_only_discovery.go  05_two_phase_workflow.go  06_filters_and_patterns.go  07_with_extraction.go  README.md
go/examples/extraction/: 01_css_extraction_http.go  01_css_extraction_sdk.go  02_llm_extraction_http.go  02_llm_extraction_sdk.go  03_schema_generation_http.go  03_schema_generation_sdk.go
go/examples/jobs/: 01_list_jobs_http.go  01_list_jobs_sdk.go  02_job_management_http.go  02_job_management_sdk.go
go/examples/proxy/: proxy_examples.go
go/examples/sessions/: 01_basic_session_http.go  README.md
go/pkg/crawl4ai/: client.go  configs.go  context.go  context_test.go  crawler.go  crawler_test.go  enhance_query_test.go  enrich_test.go  errors.go  estimate.go  file_download_test.go  (+4 more)
nodejs/: README.md  jest.config.js  package.json
nodejs/src/: client.ts  configs.ts  context.ts  crawler.ts  errors.ts  index.ts  models.ts
nodejs/tests/: context.test.ts  discovery-enhance-query.test.ts  e2e.test.ts  enrich-e2e.test.ts  file-download.test.ts  url-statuses.test.ts  v07-changes.test.ts  wrapper-e2e.test.ts
python/: README.md  pyproject.toml
python/claude-plugin/: .mcp.json  README.md  start.sh
python/claude-plugin/.claude-plugin/: plugin.json
python/claude-plugin/hooks/: hooks.json
python/claude-plugin/scripts/: check-setup.sh  crawl.py  health.sh  poll-job.py  test-key.sh
python/claude-plugin/skills/crawl4ai/: SKILL.md
python/claude-plugin/skills/crawl4ai/examples/: advanced.md  common.md
python/claude-plugin/skills/crawl4ai/reference/: browser-config.md  crawler-config.md  endpoints.md  errors.md
python/claude-plugin/skills/setup/: SKILL.md
python/claude-plugin/skills/switch/: SKILL.md
python/claude-plugin/skills/update/: SKILL.md
python/crawl4ai_cloud/: __init__.py  _client.py  configs.py  context.py  crawler.py  errors.py  models.py
python/crawl4ai_cloud/claude/: __init__.py  config.py  core.py  mcp_server.py  poll.py
python/crawl4ai_cloud/claude/backends/: __init__.py  cloud.py  local.py
python/examples/: tutorial.ipynb
python/examples/advanced/: 01_screenshots_http.py  01_screenshots_sdk.py  02_custom_browser_config_http.py  02_custom_browser_config_sdk.py  03_error_handling_sdk.py  04_storage_usage_sdk.py
python/examples/crawl/: 01_basic_crawl_http.py  01_basic_crawl_sdk.py  02_batch_crawl_http.py  02_batch_crawl_sdk.py  03_async_crawl_http.py  03_async_crawl_sdk.py  04_async_webhook_http.py  README.md
python/examples/deep_crawl/: 01_map_strategy.py  02_tree_strategies.py  03_best_first_scoring.py  04_scan_only_discovery.py  05_two_phase_workflow.py  06_filters_and_patterns.py  07_with_extraction.py  README.md
python/examples/extraction/: 01_css_extraction_http.py  01_css_extraction_sdk.py  02_llm_extraction_http.py  02_llm_extraction_sdk.py  03_schema_generation_http.py  03_schema_generation_sdk.py
python/examples/jobs/: 01_list_jobs_http.py  01_list_jobs_sdk.py  02_job_management_http.py  02_job_management_sdk.py
python/examples/proxy/: proxy_examples.js  proxy_examples.py
python/examples/sessions/: 01_basic_session_http.py  01_basic_session_sdk.py  02_session_with_crawl4ai_http.py  02_session_with_crawl4ai_sdk.py  03_session_with_puppeteer.py  README.md
python/tests/: __init__.py  conftest.py  test_context.py  test_crawl.py  test_discovery_enhance_query.py  test_e2e.py  test_enrich_e2e.py  test_file_download.py  test_generate_schema.py  test_url_statuses.py  test_v07_changes.py  test_wrapper_e2e.py
(+40 files in other folders)
