[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4ai-cloud-sdk"
version = "0.2.4"
description = "Lightweight cloud SDK for Crawl4AI - mirrors the OSS API"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Unclecode", email = "unclecode@kidocode.com"}
]
keywords = [
    "crawl4ai",
    "web-scraping",
    "crawler",
    "cloud",
    "api",
    "web-crawler",
    "scraping",
    "markdown",
]
dependencies = [
    "httpx>=0.27.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://api.crawl4ai.com"
Documentation = "https://api.crawl4ai.com/docs"
Repository = "https://github.com/unclecode/crawl4ai-cloud-sdk"
Issues = "https://github.com/unclecode/crawl4ai-cloud-sdk/issues"
Discord = "https://discord.gg/jP8KfhDhyN"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
mcp = ["mcp>=1.0.0"]
claude = ["mcp>=1.0.0"]
local = ["crawl4ai"]

[project.scripts]
crawl4ai-mcp = "crawl4ai_cloud.claude.mcp_server:main"

[tool.setuptools]
packages = ["crawl4ai_cloud", "crawl4ai_cloud.claude", "crawl4ai_cloud.claude.backends"]
